@@ -284,7 +284,6 @@ ELSE(CMAKE_SYSTEM MATCHES "SunOS")
 
 IF(CMAKE_SYSTEM MATCHES "Windows")
   ADD_DEFINE(USE_BACKEND_NATIVE_WINDOWS)
-  ADD_DEFINE(AL_BUILD_LIBRARY)
   SET(OS_OBJS ${WINDOWS_OBJS})
   # need winmm library for waveOutOpen etc.
   SET(ADD_LIBS ${ADD_LIBS} winmm)
@@ -530,6 +529,8 @@ FIND_PACKAGE(CompilerVisibility)
 FIND_PACKAGE(CompilerFlagsSet)
 
 ADD_DEFINE(LINUX_AL)
+ADD_DEFINITIONS(-DAL_BUILD_LIBRARY)
+
 
 GENERATE_CONFIG_H()
 
